--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Karla:wght@400;700&family=Varela+Round&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -60,7 +59,7 @@
 
   <!-- FEATURES SECTION -->
 
-  <section id="features">
+  <div id="features">
     <div class="flex-container-2 row">
 
       <hr>
@@ -94,7 +93,7 @@
       </div>
     
     </div>
-  </section>
+  </div>
 
   <!-- HOW WE WORK -->
 
